<resources>
    <string name="app_name">Storeteller</string>
    <string name="title_library">Library</string>
    <string name="title_settings">Settings</string>
    <string name="title_play">Play</string>
    <string name="select_file">Select File</string>
    <string name="back">Back</string>
    <string name="view_file_name">View File Name</string>
    <string name="textview">TextView</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="emptyPlay">"Please load a file from the Library fragment"</string>
    <string name="recentSelectedFiles">"Recent Selected Files"</string>
    <string name="speed">"Speed"</string>
    <string name="pitch">"Pitch"</string>
    <string name="language">"Select the language you want"</string>



</resources>