<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_library">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.storeteller.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.storeteller.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_navigation_play"
            app:destination="@id/navigation_play" />
    </fragment>

    <fragment
        android:id="@+id/navigation_play"
        android:name="com.example.storeteller.ui.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" >
        <action
            android:id="@+id/action_navigation_play_to_navigation_library"
            app:destination="@id/navigation_library"
            app:popUpTo="@id/navigation_library"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
