<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.library.LibraryFragment">

    <Button
        android:id="@+id/selectFileButton"
        android:layout_width="308dp"
        android:layout_height="80dp"
        android:text="@string/select_file"
        android:background="@drawable/Little_button"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <ListView
        android:id="@+id/fileList"
        android:layout_width="334dp"
        android:layout_height="310dp"
        android:layout_below="@id/selectFileButton"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectFileButton"
        app:layout_constraintVertical_bias="0.964" >

        <Button
            android:id="@+id/viewFileButon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/B_button"
            android:text="@string/view_file_name" />
    </ListView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="156dp"
        android:layout_height="22dp"
        android:layout_marginBottom="120dp"
        android:text="@string/recentSelectedFiles"
        app:layout_constraintBottom_toTopOf="@+id/fileList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>